syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

// register
message RegisterRequest {
    string email = 1;
    string name = 2;
    string password = 3;
}

message RegisterResponse {
    int64 status = 1;
    string error = 2;
}

// login
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

// RefreshToken
message RefreshTokenRequest { string token = 1; }

message RefreshTokenResponse {
    int64 status = 1;
    string error = 2;
    int64 userId = 3; 
}

// RefreshToken
message LogoutRequest { string token = 1; }

message LogoutResponse {
    int64 status = 1;
    string error = 2;
}
